# onnxrt-sys

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  wrapper.h
.github/workflows/: build.yml
examples/: c_api_sample.rs
src/: lib.rs
