[package]
name = "onnxrt-sys"
version = "0.10.0"
authors = ["FuriosaAI, Inc."]
description = "OnnxRt-sys provides low-level Rust bindings to the C API for Microsoft's ONNX Runtime."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/furiosa-ai/onnxrt-sys"
keywords = ["onnx", "neuralnetworks", "ffi", "bindings"]
categories = ["science", "external-ffi-bindings"]
documentation = "https://furiosa-ai.github.io/onnxrt-sys/0.10.0/onnxrt-sys"
edition = "2021"

[features]
default = []
# Use bindgen to generate bindings in build.rs
generate-bindings = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.59.2", optional = true }
ureq = "2.5.0"

[target.'cfg(unix)'.build-dependencies]
flate2 = "1.0.23"
tar = "0.4.38"

[target.'cfg(windows)'.build-dependencies]
zip = "0.6.2"
